--- a/ds18b20/demo/configs/n76e003_defconfig
+++ b/ds18b20/demo/configs/n76e003_defconfig
@@ -36,7 +36,7 @@ CONFIG_LITE=y
 # General setup
 #
 CONFIG_TICK_HZ=18
-CONFIG_TASK_COUNT=3
+CONFIG_TASK_COUNT=2
 CONFIG_DEFAULT_STACK_COUNT=128
 CONFIG_DEADLOCK_COUNT=1000
 
@@ -44,14 +44,14 @@ CONFIG_DEADLOCK_COUNT=1000
 # Build configuration
 #
 CONFIG_CROSS_COMPILE=""
-# CONFIG_CC_NO_OPTIMIZATION is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_CC_NO_OPTIMIZATION=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE1 is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE2 is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE3 is not set
-CONFIG_DEBUG=y
-# CONFIG_NDEBUG is not set
-# CONFIG_MAP is not set
+# CONFIG_DEBUG is not set
+CONFIG_NDEBUG=y
+CONFIG_MAP=y
 CONFIG_EXTRA_CFLAGS=""
 CONFIG_LDSCRIPT=""
 CONFIG_EXTRA_LDFLAGS=""
@@ -79,9 +79,9 @@ CONFIG_EXTRA_LDFLAGS=""
 #
 # Clock drivers
 #
-# CONFIG_CLOCK_N76E003 is not set
+CONFIG_CLOCK_N76E003=y
 # CONFIG_CLOCK_CY7C6801XA is not set
-CONFIG_CLOCK_NUMICRO=y
+# CONFIG_CLOCK_NUMICRO is not set
 
 #
 # DMA drivers
@@ -90,6 +90,7 @@ CONFIG_CLOCK_NUMICRO=y
 #
 # EEPROM drivers
 #
+# CONFIG_EEPROM_CY15B004J is not set
 
 #
 # Flash drivers
@@ -195,7 +196,7 @@ CONFIG_MUX_N76E003=y
 #
 # SPI drivers
 #
-CONFIG_SPI_N76E003=y
+# CONFIG_SPI_N76E003 is not set
 
 #
 # TWI drivers
@@ -205,8 +206,15 @@ CONFIG_SPI_N76E003=y
 #
 # UART drivers
 #
-# CONFIG_UART_N76E003 is not set
+CONFIG_UART_N76E003=y
+# CONFIG_UART_N76E003_UART1 is not set
+# CONFIG_UART_N76E003_IRQDRIVEN is not set
 # CONFIG_UART_8051 is not set
+
+#
+# 1-Wire drivers
+#
+CONFIG_W1_UART=y
 
 #
 # Watchdog drivers
